--- a/backEnd/src/main/resources/application.properties
+++ b/backEnd/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 #	comentar o MySql quando for mandar para o heroku 
 
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3306/blog_pessoal?createDatabaseIfNotExist=true&serverTimezone=UTC&usessl=false
-#spring.datasource.username=root
-#spring.datasource.password=@123
-#spring.jpa.show-spl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3306/blog_pessoal?createDatabaseIfNotExist=true&serverTimezone=UTC&usessl=false
+spring.datasource.username=root
+spring.datasource.password=@123
+spring.jpa.show-spl=true
 
 #	 comentar o PostgreSql quando for mandar para uso local
 
-spring.jpa.generate-ddl=true
-spring.datasource.url=${JDBC_DATASOURCE_URL}
-spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=true
+#spring.datasource.url=${JDBC_DATASOURCE_URL}
+#spring.jpa.show-sql=true
